2005-04-21  Karl Berry  <karl@gnu.org>

	* util/texi2dvi: also accept .drv and .dtx as LaTeX.
	Suggestion from Wybo Dekker.

2005-04-18  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\smallerbook): new (test) definition for 6x9,
		which is what lulu.com (print-on-demand) accepts.

2005-04-05  Matthias Kilian  <kili@outback.escape.de>  (tiny changes)

	* makeinfo/html.c (rollback_empty_tag): be sure to avoid negative
	array indexing.
	* makeinfo/multi.c (env): make static.
	* makeinfo/tests/cond, html-extrali, include-value: use grep -c,
	instead of piping to wc -l, since that avoids the output files
	being treated as binary on BSD.

2005-04-04  Stepan Kasal  <kasal@ucw.cz>

	* makeinfo/makeinfo.c (usage): Add indentation to the examples and
	  fix the indentation of the --footnote-style option, so that
	  help2man can recognize these; also some cosmetic indentation fixes.
	* doc/Makefile.am (makeinfo.1): Add a sed command to postprocess
	  the generated manpage.
	* doc/makefile.1: Refresh.
	Thanks to Jim Razmus for the bug report.

2005-04-04  Torsten Bronger  <bronger@physik.rwth-aachen.de>  (tiny changes)

	* doc/texinfo.txi: Fix several typos.

2005-04-04  Stepan Kasal  <kasal@ucw.cz>

	* doc/Makefile.am: Fix my previous patch, so that the rules work; and
	  don't modify $PATH, it's simpler to give help2man the full pathname.

2005-03-31  Per Bothner  <per@bothner.com>

	* makeinfo/makeinfo.c (maybe_escaped_expansion): Don't start a new
	para during string expansion.

	* makeinfo/xml.c (xml_element_dummy): Dummy variable so that enum
	names get emitted in debug symbols, which helps debugging.

2005-03-31  ezra peisach <epeisach@med-xtal.bu.edu>  (tiny change)

	(bug-texinfo mail 30 Mar 2005 16:40:24 -0500.)
	* defun.h (get_base_type): now takes an enum insertion_type.
	  defun.c (get_base_type): use enum instead of int internally.
	  (defun_internal): takes enum insertion_type instead of int and use
			  enum internally.
	 (cm_defun): ditto.